this is the second commit. the program is not ready but on the way.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,62 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header>
+    <header class="inter-font header">
+        <nav class="navbar">
+            <h1 class="oranged-red-color"><i>Fitness</i></h1>
+            <ul>
+                <li><a class="ash-color-opacity" href=""><button class="btn-1"><b>Home</b></button></a></li>
+                <li><a class="ash-color-opacity" href="">Service</a></li>
+                <li><a class="ash-color-opacity" href="">Contact</a></li>
+                <li><a class="ash-color-opacity" href="">About</a></li>
+            </ul>
+        </nav>
 
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="ash-color">Get body in shape & stay healthy</h1>
+                <p class="ash-color-opacity">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <button class="btn-1">Join club now</button>
+                <button class="btn-2 ash-color-opacity">download App</button>
+            </div>
+            <div class="bannerimg"><img src="images/Images 2.png" alt=""></div>
+        </div>
     </header>
     <main>
+        <section class="inter-font change-habbit">
+            <div class="habbit-title display-flex">
+                <h1 class="ash-color">Change Your Habits</h1>
+                <p class="ash-color-opacity">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="habbiter-img display-flex">
+                <div class="habbiter-img-dis display-flex"><img src="images/image 2.png" alt="">
+                <h1 class="ash-color">Movement</h1>
+                <p class="ash-color-opacity">We believe fitness should be accessible to everyone</p></div>
+                <div class="habbiter-img-dis display-flex"><img src="images/image 3.png" alt="">
+                <h1 class="ash-color">Time</h1>
+                <p class="ash-color-opacity">We believe fitness should be accessible to everyone</p></div>
+                <div class="habbiter-img-dis display-flex"><img src="images/image 4.png" alt="">
+                <h1 class="ash-color">Practice</h1>
+                <p class="ash-color-opacity">We believe fitness should be accessible to everyone</p></div>
+                <div class="habbiter-img-dis display-flex"><img src="images/image 5.png" alt="">
+                <h1 class="ash-color">Weight Loss</h1>
+                <p class="ash-color-opacity">We believe fitness should be accessible to everyone</p></div>
+            </div>
+        </section>
 
+        <section class="run-an-extra-mile display-flex">
+            <div class="extra-mile-content display-flex">
+                <h1 class="extra-mile-title ash-color">Run an Extra Mile Easily</h1>
+                <p class="extra-mile-dis ash-color-opacity">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <button class="btn-1">Join Now</button>
+            </div>
+            <div class="extra-mile-img"><img src="images/run.jpg" alt=""></div>
+        </section>
+
+        
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
